--- a/Snake/MainWindow.xaml
+++ b/Snake/MainWindow.xaml
@@ -22,11 +22,17 @@
             </Grid.RowDefinitions>
 
             <TextBlock x:Name="ScoreText"
-       HorizontalAlignment="Center"
+       HorizontalAlignment="Left"
        VerticalAlignment="Center"
        Text="SCORE: 0"
        FontSize="22"
        Margin="10"/>
+            <TextBlock x:Name="HighScoreText"
+        HorizontalAlignment="Right"
+        VerticalAlignment="Center"
+        Text="HIGH SCORE: 0"
+        FontSize="22"
+        Margin="10"/>
 
             <Border x:Name="GridBorder"
                     Grid.Row="1"
